force-app/main/default/objects/sirenum__Placement__c/fields/Auto_Evertime_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Auto_Evertime_External_ID__c</fullName>
    <label>Auto Evertime External ID</label>
    <type>AutoNumber</type>
</CustomField>