force-app/main/default/objects/sirenum__Placement__c/fields/Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fee_Percentage__c</fullName>
    <label>Fee Percentage</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>