force-app/main/default/objects/sirenum__Placement__c/fields/Job_Role_Scale__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Scale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role Scale</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Job_Role_Scale__c.Job_Role__c</field>
            <operation>equals</operation>
            <valueField>$Source.sirenum__Job_Role__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job_Role_Scale__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>