force-app/main/default/objects/sirenum__Placement__c/fields/Mismatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Date__c</fullName>
    <label>Mismatch Date</label>
    <type>Date</type>
</CustomField>